# advent-of-code-2022

./: .gitignore  README.rst  pyproject.toml
01/: P1.py  P2.py
02/: P1.py  P2.py
03/: P1.py  P2.py
04/: P1.py  P2.py
05/: P1.py  P2.py
06/: P1.py  P2.py
07/: P1.py  P2.py
08/: P1.py  P2.py
10/: P1.py  P2.py
12/: P1.py  P2.py
13/: P1.py  P2.py
tests/: test_modname.py
