[tool.poetry]
name = "modname"
version = "0.1.0"
description = ""
authors = ["Renzo Crisostomo <renzo@crisostomo.me>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
